Created a page with form

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,146 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form 
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application" 
+      method="post">
+      <fieldset class="fieldset">
+        <legend>Personal information</legend>
+        <label class="field">
+            Surname:
+          <input
+                type="text"
+                name="surname"
+                required
+                autocomplete="off"
+          >
+        </label>
+        <label class="field">
+            Name:
+          <input
+                type="text"
+                name="name"
+                required
+                autocomplete="off"
+          >
+        </label>
+        <label class="field">
+            How old are You?
+          <input
+                type="number"
+                name="howOldAreYou"
+                min="1"
+                max="100"
+                value="12"
+          >
+        </label>
+        <label class="field">
+            Full date of birth:
+          <input
+                type="date"
+                name="fullDateOfBirth"
+          >
+        </label>
+        <label class="field">
+            I accept the term of the agreement
+          <input
+                type="checkbox"
+                name="iAcceptTerm"
+                required
+          >
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>Registration</legend>
+        <label class="field">
+            E-mail:
+          <input
+                type="email"
+                autocomplete="off"
+                name="email"
+                required
+                placeholder="email@example.com"
+          >
+        </label>
+        <label class="field">
+            Password:
+          <input
+                type="password"
+                name="password"
+                required
+                minlength="5"
+                maxlength="14"
+          >
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>An interesting fact about you!</legend> 
+        <label class="field">
+            Do you love cats?
+          <input 
+                type="radio" 
+                name="loveCats" 
+                value="yes">
+                Yes
+          <input 
+                type="radio" 
+                name="loveCats" 
+                value="no">
+                No
+        </label>
+        <label class="field">
+            What is your favorite color?
+          <input
+                type="color"
+                name="favColor"
+                multiple
+          >
+        </label>
+        <label class="field">
+            What time do you go to bed?
+          <input 
+                type="time" 
+                name="timeToBed"
+                step="2">
+        </label>
+        <label class="field">
+            What are your favorite brand of cars?
+          <select name="favCars" required multiple>
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </label>
+        <label class="field">
+            How do you rate our work?
+          <input 
+                type="range" 
+                name="rateOurWork"
+                value="0">
+        </label>
+      </fieldset>
+      <fieldset class="fieldset">
+        <legend>Additional info:</legend>
+        <label class="field">
+            Comments:
+          <textarea 
+                name="comments" 
+                rows="2" 
+                cols="20">
+          </textarea>
+        </label>
+        <label class="field">
+            Would you recommend us?
+          <select name="reccomendUs">
+            <option value="no">no</option>
+            <option value="yes" selected>yes</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit" class="form_bottom">
+      Submit
+      </button>
+    </form>
   </body>
 </html>
