fixed lint error

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,10 @@
         </label>
         <label class="field">
             What are your favorite brand of cars?
-          <select name="favCars" required multiple>
+          <select 
+                name="favCars" 
+                required 
+                multiple>
             <option value="bmw">BMW</option>
             <option value="audi">Audi</option>
             <option value="lada">Lada</option>
