fixed spacing and naming

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
         <label class="field">
             Surname:
           <input
-                type="text"
-                name="surname"
-                required
-                autocomplete="off"
+            type="text"
+            name="surname"
+            required
+            autocomplete="off"
           >
         </label>
         <label class="field">
@@ -39,7 +39,7 @@
             How old are You?
           <input
                 type="number"
-                name="howOldAreYou"
+                name="age"
                 min="1"
                 max="100"
                 value="12"
@@ -56,7 +56,7 @@
             I accept the term of the agreement
           <input
                 type="checkbox"
-                name="iAcceptTerm"
+                name="acceptTerms"
                 required
           >
         </label>
@@ -89,10 +89,10 @@
         <label class="field">
             Do you love cats?
           <input 
-                type="radio" 
-                name="loveCats" 
-                value="yes">
-                Yes
+            type="radio" 
+            name="loveCats" 
+            value="yes">
+            Yes
           <input 
                 type="radio" 
                 name="loveCats" 
