Added label to no

--- a/src/index.html
+++ b/src/index.html
@@ -29,35 +29,35 @@
         <label class="field">
             Name:
           <input
-                type="text"
-                name="name"
-                required
-                autocomplete="off"
+            type="text"
+            name="name"
+            required
+            autocomplete="off"
           >
         </label>
         <label class="field">
             How old are You?
           <input
-                type="number"
-                name="age"
-                min="1"
-                max="100"
-                value="12"
+            type="number"
+            name="age"
+            min="1"
+            max="100"
+            value="12"
           >
         </label>
         <label class="field">
             Full date of birth:
           <input
-                type="date"
-                name="fullDateOfBirth"
+            type="date"
+            name="fullDateOfBirth"
           >
         </label>
         <label class="field">
             I accept the term of the agreement
           <input
-                type="checkbox"
-                name="acceptTerms"
-                required
+            type="checkbox"
+            name="acceptTerms"
+            required
           >
         </label>
       </fieldset>
@@ -66,21 +66,21 @@
         <label class="field">
             E-mail:
           <input
-                type="email"
-                autocomplete="off"
-                name="email"
-                required
-                placeholder="email@example.com"
+            type="email"
+            autocomplete="off"
+            name="email"
+            required
+            placeholder="email@example.com"
           >
         </label>
         <label class="field">
             Password:
           <input
-                type="password"
-                name="password"
-                required
-                minlength="5"
-                maxlength="14"
+            type="password"
+            name="password"
+            required
+            minlength="5"
+            maxlength="14"
           >
         </label>
       </fieldset>
@@ -91,35 +91,41 @@
           <input 
             type="radio" 
             name="loveCats" 
-            value="yes">
+            value="yes"
+          >
             Yes
-          <input 
-                type="radio" 
-                name="loveCats" 
-                value="no">
-                No
+          <label>
+            <input 
+            type="radio" 
+            name="loveCats" 
+            value="no"
+            >
+            No
+          </label>  
         </label>
         <label class="field">
             What is your favorite color?
           <input
-                type="color"
-                name="favColor"
-                multiple
+            type="color"
+            name="favColor"
+            multiple
           >
         </label>
         <label class="field">
             What time do you go to bed?
           <input 
-                type="time" 
-                name="timeToBed"
-                step="2">
+            type="time" 
+            name="timeToBed"
+            step="2"
+          >
         </label>
         <label class="field">
             What are your favorite brand of cars?
           <select 
-                name="favCars" 
-                required 
-                multiple>
+            name="favCars" 
+            required 
+            multiple
+          >
             <option value="bmw">BMW</option>
             <option value="audi">Audi</option>
             <option value="lada">Lada</option>
@@ -128,9 +134,10 @@
         <label class="field">
             How do you rate our work?
           <input 
-                type="range" 
-                name="rateOurWork"
-                value="0">
+            type="range" 
+            name="rateOurWork"
+            value="0"
+          >
         </label>
       </fieldset>
       <fieldset class="fieldset">
@@ -138,9 +145,10 @@
         <label class="field">
             Comments:
           <textarea 
-                name="comments" 
-                rows="2" 
-                cols="20">
+            name="comments" 
+            rows="2" 
+            cols="20"
+          >
           </textarea>
         </label>
         <label class="field">
